--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -5,7 +5,7 @@ flake8-commas==2.0.0
 flake8-docstrings==1.3.0
 flake8-import-order==0.18.1
 flake8-quotes==2.0.1
-neovim==0.3.1
+pynvim==0.3.2
 neovim-remote==2.1.7
 pycodestyle==2.5.0
 pydocstyle==3.0.0
