--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "config": {
     "bashfiles": "find . -type f -name \"*.bash\" -not -path \"*.tox/*\" -not -path \"*.zplugin/*\" -not -path \"*/vendor/*\" -not -path \"*tmp/*\"",
     "mdfiles": "find . -type f -name \"*.md\" -not -path \"./tmux/plugins*\" -not -path \"./vale/*\"  -not -path \"*.zplugin/*\" -not -path \"*/chromium/*\" -not -path \"*/node_modules/*\" -not -path \"*tmp/*\" -not -path \"*/vendor/*\"",
-    "pyfiles": "find . -type f -name \"*.py\" -path \"*bitbar/mine/*\"",
+    "pyfiles": "find . -type f -name \"*.py\" -path \"*mac/bitbar/mine/*\"",
     "shfiles": "find . -type f -name \"*.sh\" -not -path \"*.tox/*\" -not -path \"*.zplugin/*\" -not -path \"*/vendor/*\" -not -path \"*/tmux/plugins*\"",
     "vimfiles": "find . -type f -name \"*.vim\" -path \"./vim/*\" -not -name \"plug.vim\" -not -path \"*/vendor/*\" -not -path \"*tmp/*\"",
     "yamlfiles": "find . -type f -regex \".*\\.y\\(a\\)*ml\" -not -path \"*.tox/*\""
@@ -53,8 +53,8 @@
       "**/*.md",
       "**/*.py",
       "**/*.xml",
-      "bitbar/enabled/*",
-      "bitbar/vendor/*",
+      "mac/bitbar/enabled/*",
+      "mac/bitbar/vendor/*",
       "hammerspoon/Spoons/**",
       "iterm2/*.itermcolors",
       "linux/**",
