move mac apps stuff into mac/

--- a/package.json
+++ b/package.json
@@ -53,13 +53,13 @@
       "**/*.md",
       "**/*.py",
       "**/*.xml",
-      "mac/bitbar/enabled/*",
-      "mac/bitbar/vendor/*",
-      "hammerspoon/Spoons/**",
-      "iterm2/*.itermcolors",
       "linux/**",
       "local/**",
       "logs/**",
+      "mac/bitbar/enabled/*",
+      "mac/bitbar/vendor/*",
+      "mac/hammerspoon/Spoons/**",
+      "mac/iterm2/*.itermcolors",
       "mac/*.terminal",
       "meta/**",
       "terminfo/**",
