fix use coc instead of neomake

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,15 +1,25 @@
 {
   "codeLens.enable": true,
+
+  "diagnostic.checkCurrentLine": false,
+  "diagnostic.displayByAle": false,
   "diagnostic.enable": true,
-  "diagnostic.enableMessage": "jump",
+  "diagnostic.enableMessage": "always",
   "diagnostic.enableSign": true,
-  "diagnostic.locationlist": true,
   "diagnostic.errorSign": "⚑",
+  "diagnostic.highlightOffset": 1000,
   "diagnostic.hintSign": "⚑",
   "diagnostic.infoSign": "⚑",
+  "diagnostic.joinMessageLines": false,
+  "diagnostic.level": "hint",
+  "diagnostic.locationlist": true,
+  "diagnostic.messageTarget": "float",
+  "diagnostic.refreshAfterSave": false,
+  "diagnostic.refreshOnInsertMode": true,
+  "diagnostic.signOffset": 1000,
+  "diagnostic.virtualText": false,
+  "diagnostic.virtualTextPrefix": "» ",
   "diagnostic.warningSign": "⚑",
-  "diagnostic.refreshAfterSave": true,
-  "diagnostic.virtualText": true,
 
   //"diagnostic.displayByAle": true,
   // When true, destroys loclist on insert (and kills neomake results)
