use coc-eslint, update project roots, defer matchparen in vim-matchup

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -43,7 +43,7 @@
   // coc-eslint
   // =========================================================================
 
-  "eslint.enable": false,
+  "eslint.enable": true,
   "eslint.autoFix": false,
   "eslint.autoFixOnSave": false,
   "eslint.run": "onType",
