--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -40,6 +40,34 @@
   },
 
   // =========================================================================
+  // coc-diagnostic
+  // =========================================================================
+
+  "diagnostic-languageserver.enable": true,
+  "diagnostic-languageserver.linters": {
+    "vint": {
+      "command": "vint",
+      "debounce": 100,
+      "args": [ "--enable-neovim", "-"],
+      "offsetLine": 0,
+      "offsetColumn": 0,
+      "sourceName": "vint",
+      "formatLines": 1,
+      "formatPattern": [
+	"[^:]+:(\\d+):(\\d+):\\s*(.*$)",
+	{
+	  "line": 1,
+	  "column": 2,
+	  "message": 3
+	}
+      ]
+    }
+  },
+  "diagnostic-languageserver.filetypes": {
+    "vim": "vint",
+  },
+
+  // =========================================================================
   // coc-eslint
   // =========================================================================
 
