disable colors in plugdiff

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -21,6 +21,8 @@
   "diagnostic.virtualTextPrefix": "» ",
   "diagnostic.warningSign": "⚑",
 
+  "highlight.disableLanguages": [ "vim-plug" ],
+
   //"diagnostic.displayByAle": true,
   // When true, destroys loclist on insert (and kills neomake results)
   "suggest.echodocSupport": true,
