signcol2 fixed, change good symbol, remove signature and signify for coc-git, change markdown makers, set git blame popup size, rm vim-json

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -21,6 +21,12 @@
   "diagnostic.virtualTextPrefix": "» ",
   "diagnostic.warningSign": "⚑",
 
+  "git.addedSign.hlGroup": "GitGutterAdd",
+  "git.changedSign.hlGroup": "GitGutterChange",
+  "git.removedSign.hlGroup": "GitGutterDelete",
+  "git.topRemovedSign.hlGroup": "GitGutterDelete",
+  "git.changeRemovedSign.hlGroup": "GitGutterChangeDelete",
+
   "highlight.disableLanguages": [ "vim-plug" ],
 
   //"diagnostic.displayByAle": true,
