remove parenmatch, check for nvim 0.4 signcolumn features

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -114,4 +114,5 @@
 
   "javascript.preferences.quoteStyle": "single",
   "javascript.format.insertSpaceAfterFunctionKeywordForAnonymousFunctions": true,
+  "git.enableGutters": true,
 }
